--- a/raml/examples/output/project.json
+++ b/raml/examples/output/project.json
@@ -3,6 +3,7 @@
 	"created": "2016-09-22T21:51:53.151000+00:00",
 	"modified": "2016-09-22T21:51:53.151000+00:00",
 	"label": "Neuroscience",
+	"description": "A Project",
 	"_id": "57e452791cff88b85f9f9c97",
 	"public": false,
 	"permissions": [{
