Allow for optional inputs

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 elasticsearch==1.9.0
 enum==0.4.6
-jsonschema==2.5.1
+jsonschema==2.6.0
 Markdown==2.6.5
 pymongo==3.2
 pyOpenSSL==0.15.1
@@ -13,4 +13,4 @@ strict-rfc3339==0.7
 uwsgi==2.0.13.1
 webapp2==2.5.2
 WebOb==1.5.1
--e git://github.com/flywheel-io/gears.git@15556fef7dc98afd702595d47537346dbc8a7373#egg=gear_tools
+-e git://github.com/flywheel-io/gears.git@65aae6ae6f8634bf45d744332641b3838fc06668#egg=gears
