--- a/raml/schemas/output/config.json
+++ b/raml/schemas/output/config.json
@@ -41,25 +41,22 @@
       "patternProperties": {
         "^[0-9a-z]*$":{
           "properties": {
-            "id_endpoint": {
-              "type": "string"
-            },
             "verify_endpoint": {
               "type": "string"
             },
             "client_id": {
               "type": "string"
             },
+            "client_secret": {
+              "type": "string"
+            },
             "auth_endpoint": {
               "type": "string"
+            },
+            "refresh_endpoint": {
+              "type": "string"
             }
-          },
-          "required": [
-            "id_endpoint",
-            "verify_endpoint",
-            "client_id",
-            "auth_endpoint"
-          ]
+          }
         }
       }
     },
