--- a/requirements.txt
+++ b/requirements.txt
@@ -6,11 +6,10 @@ pymongo==3.2
 pyOpenSSL==0.15.1
 python-dateutil==2.4.2
 pytz==2015.7
-requests-toolbelt==0.6.0
 requests==2.9.1
 rfc3987==1.3.4
 strict-rfc3339==0.7
 uwsgi==2.0.13.1
 webapp2==2.5.2
 WebOb==1.5.1
--e git://github.com/flywheel-io/gears.git@65aae6ae6f8634bf45d744332641b3838fc06668#egg=gears
+git+https://github.com/flywheel-io/gears.git@65aae6ae6f8634bf45d744332641b3838fc06668
