--- a/requirements.txt
+++ b/requirements.txt
@@ -12,4 +12,4 @@ strict-rfc3339==0.7
 uwsgi==2.0.13.1
 webapp2==2.5.2
 WebOb==1.5.1
-git+https://github.com/flywheel-io/gears.git@65aae6ae6f8634bf45d744332641b3838fc06668
+git+https://github.com/flywheel-io/gears.git@65aae6ae6f8634bf45d744332641b3838fc06668#egg=gears
