--- a/test/integration_tests/requirements-integration-test.txt
+++ b/test/integration_tests/requirements-integration-test.txt
@@ -1,9 +1,12 @@
 attrdict==2.0.0
 coverage==4.0.3
 coveralls==1.1
+mock==2.0.0
+mongomock==3.8.0
+pdbpp==0.8.3
 pylint==1.5.3
 pytest-cov==2.2.0
 pytest-watch==3.8.0
 pytest==2.8.5
-mock==2.0.0
+requests_mock==1.3.0
 testfixtures==4.10.1
