--- a/test/integration_tests/requirements-integration-test.txt
+++ b/test/integration_tests/requirements-integration-test.txt
@@ -6,6 +6,7 @@ mongomock==3.8.0
 pdbpp==0.8.3
 pylint==1.5.3
 pytest-cov==2.2.0
+pytest-mock==1.6.0
 pytest-watch==3.8.0
 pytest==2.8.5
 requests_mock==1.3.0
