--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ enum==0.4.6
 jsonschema==2.6.0
 Markdown==2.6.5
 pymongo==3.2
-pyOpenSSL==17.1.0
+pyOpenSSL >=17.1.0,<18.0
 python-dateutil==2.4.2
 pytz==2015.7
 requests==2.9.1
