--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,9 @@ script:
 
 after_success:
   - coveralls
+  - if [ "$TRAVIS_BRANCH" == "master" ]; then
+        bash <(curl -s https://codecov.io/bash) -cF python;
+    fi
   - if [ "$TRAVIS_TAG" ]; then
         ./docker/build-trigger.sh Tag "$TRAVIS_TAG" "$BUILD_TRIGGER_URL";
     fi
