Add inactivity timeout to sample config file

--- a/sample.config
+++ b/sample.config
@@ -15,6 +15,7 @@
 #SCITRAN_CORE_DRONE_SECRET=""
 
 #SCITRAN_SITE_ID=""
+#SCITRAN_SITE_INACTIVITY_TIMEOUT=3600
 #SCITRAN_SITE_NAME=""
 #SCITRAN_SITE_URL=""
 #SCITRAN_SITE_API_URL=""
