self.PHI is not modified

--- a/raml/examples/output/project.json
+++ b/raml/examples/output/project.json
@@ -8,6 +8,7 @@
 	"public": false,
 	"permissions": [{
 		"access": "admin",
-		"_id": "coltonlw@flywheel.io"
+		"_id": "coltonlw@flywheel.io",
+      	"phi-access": true
 	}]
 }
