allow additional properties on output schemas

--- a/raml/schemas/definitions/project.json
+++ b/raml/schemas/definitions/project.json
@@ -46,7 +46,7 @@
                     }
                 }
             },
-            "additionalProperties": false
+            "additionalProperties": true
         }
     }
 }
