--- a/requirements.txt
+++ b/requirements.txt
@@ -14,4 +14,4 @@ unicodecsv==0.9.0
 uwsgi==2.0.13.1
 webapp2==2.5.2
 WebOb==1.5.1
-git+https://github.com/flywheel-io/gears.git@e932a86#egg=gears
+git+https://github.com/flywheel-io/gears.git@v0.1.4#egg=gears
