project phi field, if false, all permissions phi-access are true

--- a/raml/schemas/mongo/project.json
+++ b/raml/schemas/mongo/project.json
@@ -16,6 +16,7 @@
         "tags": {},
         "info": {},
         "description": {},
+        "phi": {},
 
         "group": {"type": "string"}
     },
