--- a/raml/examples/input/project.json
+++ b/raml/examples/input/project.json
@@ -1,1 +1,1 @@
-{"group":"scitran","label":"test2","description":"test project"}
+{"group":"scitran","label":"test2","description":"test project", "phi":true}
