--- a/raml/examples/output/project-list.json
+++ b/raml/examples/output/project-list.json
@@ -7,8 +7,7 @@
 	"public": false,
 	"permissions": [{
 		"access": "admin",
-		"_id": "coltonlw@flywheel.io",
-		"site": "local"
+		"_id": "coltonlw@flywheel.io"
 	}]
 }, {
 	"group": "scitran",
@@ -19,8 +18,7 @@
 	"public": false,
 	"permissions": [{
 		"access": "admin",
-		"_id": "coltonlw@flywheel.io",
-		"site": "local"
+		"_id": "coltonlw@flywheel.io"
 	}]
 }, {
 	"group": "scitran",
@@ -31,8 +29,7 @@
 	"public": false,
 	"permissions": [{
 		"access": "admin",
-		"_id": "coltonlw@flywheel.io",
-		"site": "local"
+		"_id": "coltonlw@flywheel.io"
 	}]
 }, {
 	"group": "test-group",
@@ -44,8 +41,7 @@
 	"public": false,
 	"permissions": [{
 		"access": "admin",
-		"_id": "coltonlw@flywheel.io",
-		"site": "local"
+		"_id": "coltonlw@flywheel.io"
 	}]
 }, {
 	"group": "scitran",
@@ -56,7 +52,6 @@
 	"_id": "57ed6312466d8e01c91ee427",
 	"permissions": [{
 		"access": "admin",
-		"_id": "coltonlw@flywheel.io",
-		"site": "local"
+		"_id": "coltonlw@flywheel.io"
 	}]
 }]
