Resolve JSON schema linter errors
Lint errors will now break the build.

--- a/raml/schemas/mongo/project.json
+++ b/raml/schemas/mongo/project.json
@@ -11,7 +11,7 @@
         "files": {},
         "public": {},
         "label": {},
-        "template": {"$ref": "../definitions/project-template.json"},
+        "template": {"$ref":"../definitions/project-template.json#/definitions/project-template"},
         "tags": {},
         "info": {},
         "description": {},
