--- a/swagger/package.json
+++ b/swagger/package.json
@@ -7,7 +7,8 @@
     "build": "node_modules/.bin/grunt",
     "lint": "node_modules/.bin/grunt lintSchemas",
     "test": "node_modules/.bin/jasmine --config=support/jasmine.json",
-    "watch": "node_modules/.bin/grunt live"
+    "watch": "node_modules/.bin/grunt live",
+	"coverage": "node_modules/.bin/grunt coverage"
   },
   "author": "Justin Ehlert <justinehlert@flywheel.io>",
   "license": "MIT",
