--- a/swagger/paths/version.yaml
+++ b/swagger/paths/version.yaml
@@ -1,6 +1,6 @@
 /version:
   get:
-    description: Get database schema version info
+    summary: Get server and database schema version info
     operationId: get_version
     responses:
       '200':
