--- a/swagger/paths/login.yaml
+++ b/swagger/paths/login.yaml
@@ -7,8 +7,7 @@
       '200':
         description: ''
         schema:
-          example:
-            success: true
+          $ref: schemas/output/login-output.json
 /logout:
   post:
     summary: Log Out
@@ -18,5 +17,4 @@
       '200':
         description: ''
         schema:
-          example:
-            auth_tokens_removed: 2
+          $ref: schemas/output/logout-output.json
