Allow template parameters to be optional
Parameters can now be optional or required, which allows for more advanced template usage.
Updated existing templates to set the required flag.
Added documentation for root level analyses apis via existing templates.

--- a/swagger/index.yaml
+++ b/swagger/index.yaml
@@ -36,6 +36,8 @@ tags:
     description: Site-wide reports
   - name: batch
     description: Batch job operations
+  - name: analyses
+    description: Analysis operations
 
 paths:
   $include: 
@@ -60,6 +62,7 @@ paths:
     - paths/projects.yaml
     - paths/report.yaml
     - paths/batch.yaml
+    - paths/analyses.yaml
 
 
 securityDefinitions:
