--- a/swagger/paths/projects.yaml
+++ b/swagger/paths/projects.yaml
@@ -225,6 +225,8 @@ $template_arguments:
   $template: templates/analyses-list.yaml
 /projects/{ProjectId}/analyses/{AnalysisId}:
   $template: templates/analysis-item.yaml
+  arguments:
+    supportsDelete: true
 /projects/{ProjectId}/analyses/{AnalysisId}/files:
   $template: templates/analysis-files.yaml
 /projects/{ProjectId}/analyses/{AnalysisId}/files/{Filename}:
