--- a/swagger/templates/tags-tag.yaml
+++ b/swagger/templates/tags-tag.yaml
@@ -1,10 +1,13 @@
 parameters:
   - name: resource
     type: string
+    required: true
   - name: parameter
     type: string
+    required: true
   - name: tag
     type: string
+    required: true
 template: |
     parameters:
       - required: true
