Allow template parameters to be optional
Parameters can now be optional or required, which allows for more advanced template usage.
Updated existing templates to set the required flag.
Added documentation for root level analyses apis via existing templates.

--- a/swagger/paths/acquisitions.yaml
+++ b/swagger/paths/acquisitions.yaml
@@ -48,6 +48,8 @@ $template_arguments:
   $template: templates/analyses-list.yaml
 /acquisitions/{AcquisitionId}/analyses/{AnalysisId}:
   $template: templates/analysis-item.yaml
+  arguments:
+    supportsDelete: true
 /acquisitions/{AcquisitionId}/analyses/{AnalysisId}/inputs:
   $template: templates/analysis-files.yaml
   arguments:
