--- a/swagger/templates/analysis-files-create-ticket-filename.yaml
+++ b/swagger/templates/analysis-files-create-ticket-filename.yaml
@@ -5,14 +5,18 @@ parameters:
     type: string
   - name: tag
     type: string
+    required: true
   - name: filegroup
     type: string
+    required: true
 template: |
   parameters:
+    {{#parameter}}
     - required: true
       type: string
       in: path
-      name: '{{parameter}}'
+      name: '{{.}}'
+    {{/parameter}}
     - required: true
       type: string
       in: path
@@ -31,7 +35,12 @@ template: |
       {{filegroup}} in the anlaysis.
 
       If no "ticket" query param is included, {{filegroup}} will be downloaded directly.
-    operationId: download_{{resource}}_analysis_{{filegroup}}_by_filename
+    {{#resource}}
+    operationId: download_{{.}}_analysis_{{filegroup}}_by_filename
+    {{/resource}}
+    {{^resource}}
+    operationId: download_analysis_{{filegroup}}_by_filename
+    {{/resource}}
     tags:
     - '{{tag}}'
     produces:
