--- a/swagger/paths/projects.yaml
+++ b/swagger/paths/projects.yaml
@@ -226,6 +226,8 @@ $template_arguments:
   $template: templates/analyses-list.yaml
 /projects/{ProjectId}/analyses/{AnalysisId}:
   $template: templates/analysis-item.yaml
+  arguments:
+    supportsDelete: true
 /projects/{ProjectId}/analyses/{AnalysisId}/inputs:
   $template: templates/analysis-files.yaml
   arguments:
