--- a/.dockerignore
+++ b/.dockerignore
@@ -1,15 +1,8 @@
 .git
+**/.DS_Store
+**/.*sw[op]
+**/*.py[co]
+**/*.egg-info
 
-# --- Below Should mirror .gitignore, without leading '/' --- #
-.DS_Store
-.*sw[op]
-*.py[co]
-*.egg-info
-persistent
-runtime
-bootstrap.json
-.cache
-.coverage*
-coverage.xml
-htmlcov
-node_modules
+/.coverage*
+/htmlcov
