--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ script:
     - docker build -t core:dist --target dist --build-arg VCS_BRANCH="$TRAVIS_BRANCH" --build-arg VCS_COMMIT="$TRAVIS_COMMIT" .
     - docker build -t core:dev --target dev .
     - docker save -o "$DOCKER_DIR/image.tar" $(docker history -q core:build | grep -v '<missing>') $(docker history -q core:dist | grep -v '<missing>')
-    - ./tests/bin/run-tests-docker.sh --image core:dev
+    - ./tests/bin/docker-tests.sh --image core:dev
 
 after_success:
     - if [ "$TRAVIS_TAG" ]; then
