Add jobs/logs, jobs/prepare-complete, jobs/accept-failed-output endpoints doc

--- a/swagger/paths/jobs.yaml
+++ b/swagger/paths/jobs.yaml
@@ -142,3 +142,60 @@
         schema:
           example:
             $ref: examples/output/job-config.json
+/jobs/{JobId}/logs:
+  parameters:
+    - required: true
+      type: string
+      in: path
+      name: JobId
+  post:
+    summary: Add logs to a job.
+    operationId: add_logs
+    tags:
+    - jobs
+    responses:
+      '200':
+        description: Logs were added. No value is returned.
+/jobs/{JobId}/accept-failed-output:
+  parameters:
+    - required: true
+      type: string
+      in: path
+      name: JobId
+  post:
+    summary: Accept failed job output.
+    description: >
+      Remove the 'from_failed_job' flag from the files.
+
+      Create any automatic jobs for the accepted files.
+    operationId: accept_failed_output
+    tags:
+    - jobs
+    responses:
+      '200':
+        description: Failed output is accepted and created any automatic jobs.
+      '400':
+        description: Can only accept failed output of a job that failed.
+/jobs/{JobId}/prepare-complete:
+  parameters:
+    - required: true
+      type: string
+      in: path
+      name: JobId
+  post:
+    summary: Create a ticket with the job id and its status.
+    operationId: prepare_compete
+    tags:
+    - jobs
+    parameters:
+      - name: body
+        in: body
+        schema:
+          example:
+            success: True
+    responses:
+      '200':
+        description: 'Returns a ticket'
+        schema:
+          example:
+            ticket: 579e97738120be2ada087feb
