Document site rules

--- a/swagger/index.yaml
+++ b/swagger/index.yaml
@@ -64,6 +64,7 @@ paths:
     - paths/report.yaml
     - paths/batch.yaml
     - paths/analyses.yaml
+    - paths/site-rules.yaml
 
 
 securityDefinitions:
