--- a/raml/schemas/definitions/project.json
+++ b/raml/schemas/definitions/project.json
@@ -9,8 +9,7 @@
                 "label": {"$ref": "../definitions/container.json#/definitions/label"},
                 "info": {"$ref": "../definitions/container.json#/definitions/info"},
                 "description":  {"$ref": "../definitions/project.json#/definitions/description"},
-                "group":{"$ref":"../definitions/group.json#/definitions/_id"},
-                "archived":     {"$ref":"../definitions/container.json#/definitions/archived"}
+                "group":{"$ref":"../definitions/group.json#/definitions/_id"}
             },
             "additionalProperties": false
         },
