Checkpoint commit of modifications for codegen.

--- a/swagger/templates/container-item.yaml
+++ b/swagger/templates/container-item.yaml
@@ -38,6 +38,7 @@ template: |
     parameters:
       - in: body
         name: body
+        required: true
         schema:
           $ref: {{{update-input-schema}}}
     responses:
