--- a/swagger/templates/tags.yaml
+++ b/swagger/templates/tags.yaml
@@ -23,6 +23,7 @@ template: |
     parameters:
       - name: body
         in: body
+        required: true
         schema:
           $ref: schemas/input/tag.json
     responses:
