--- a/swagger/examples/input/project-template.json
+++ b/swagger/examples/input/project-template.json
@@ -15,11 +15,11 @@
                     "$schema": "http://json-schema.org/draft-04/schema#",
                     "type": "object",
                     "properties": {
-                        "measurement": {
+                        "classification": {
                             "type":     "string",
                             "pattern":  "^[aA]natomical$" }
                     },
-                    "required": ["measurement"]
+                    "required": ["classification"]
                 },
                 "minimum": 2
             },
@@ -28,11 +28,11 @@
                     "$schema": "http://json-schema.org/draft-04/schema#",
                     "type": "object",
                     "properties": {
-                        "measurement": {
+                        "classification": {
                             "type":     "string",
                             "pattern":  "^functional$" }
                     },
-                    "required": ["measurement"]
+                    "required": ["classification"]
                 },
                 "minimum": 1
             },
@@ -41,13 +41,13 @@
                     "$schema": "http://json-schema.org/draft-04/schema#",
                     "type": "object",
                     "properties": {
-                        "measurement": { "enum": ["Localizer"] },
+                        "classification": { "enum": ["Localizer"] },
                         "label":  {
                             "type": "string",
                             "pattern": "t1"
                         }
                     },
-                    "required": ["label", "measurement"]
+                    "required": ["label", "classification"]
                 },
                 "minimum": 1
             }
