--- a/swagger/templates/file-list-upload.yaml
+++ b/swagger/templates/file-list-upload.yaml
@@ -7,10 +7,11 @@ parameters:
     type: string
 template: |
   parameters:
-    - required: true
-      type: string
+    - name: '{{parameter}}'
       in: path
-      name: '{{parameter}}'
+      type: string
+      required: true
+      
   post:
     summary: Upload a file to {{resource}}.
     operationId: upload_{{resource}}_file
@@ -19,9 +20,11 @@ template: |
     consumes:
       - multipart/form-data
     parameters:
-      - in: formData
-        name: formData
-        type: string
+      - name: file
+        in: formData
+        type: file
+        required: true
+        description: The file to upload
     responses:
       '200':
         description: ''
