Add missing DELETE file

--- a/swagger/templates/file-item.yaml
+++ b/swagger/templates/file-item.yaml
@@ -87,3 +87,12 @@ template: |
       '200':
         $ref: '#/responses/200:deleted-with-count'
 
+  delete:
+    summary: Delete a file
+    operationId: delete_{{resource}}_file
+    tags:
+    - '{{tag}}'
+    responses:
+      '200':
+        $ref: '#/responses/200:modified-with-count'
+
