Have Travis push to Docker Hub for this branch
(needs to be undone before merge)

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,16 +25,16 @@ script:
     - test -f "$DOCKER_DIR/image.tar" && docker load -i "$DOCKER_DIR/image.tar" || true
     - docker build -t core:build --target build .
     - docker build -t core:dist --target dist --build-arg VCS_BRANCH="$TRAVIS_BRANCH" --build-arg VCS_COMMIT="$TRAVIS_COMMIT" .
-    - docker build -t core:testing --target testing .
+    - docker build -t core:dev --target testing .
     - docker save -o "$DOCKER_DIR/image.tar" $(docker history -q core:build | grep -v '<missing>') $(docker history -q core:dist | grep -v '<missing>')
-    - ./tests/bin/run-tests-docker.sh --image core:testing
+    - ./tests/bin/run-tests-docker.sh --image core:dev
 
 after_success:
     - if [ "$TRAVIS_TAG" ]; then
           docker tag core:dist scitran/core:$TRAVIS_TAG;
           docker push scitran/core:$TRAVIS_TAG;
       fi
-    - if [ "$TRAVIS_EVENT_TYPE" == "push" -a "$TRAVIS_BRANCH" == "master" ]; then
-          docker tag core:dist scitran/core:latest;
-          docker push scitran/core:latest;
+    - if [ "$TRAVIS_EVENT_TYPE" == "push" -a "$TRAVIS_BRANCH" == "nginx-unit" ]; then
+          docker tag core:dev scitran/core:nginx-unit;
+          docker push scitran/core:nginx-unit;
       fi
