--- a/swagger/paths/acquisitions.yaml
+++ b/swagger/paths/acquisitions.yaml
@@ -15,6 +15,9 @@ $template_arguments:
     update-input-schema: schemas/input/acquisition-update.json
     get-output-schema: schemas/output/acquisition.json
 
+/acquisitions/{AcquisitionId}/info:
+  $template: templates/container-item-info.yaml
+
 # ===== Tags =====
 /acquisitions/{AcquisitionId}/tags:
   $template: templates/tags.yaml
@@ -34,6 +37,8 @@ $template_arguments:
   $template: templates/file-list-upload.yaml
 /acquisitions/{AcquisitionId}/files/{FileName}:
   $template: templates/file-item.yaml
+/acquisitions/{AcquisitionId}/files/{FileName}/info:
+  $template: templates/file-item-info.yaml
 
 # ===== Notes =====
 /acquisitions/{AcquisitionId}/notes:
