--- a/swagger/templates/analysis-item.yaml
+++ b/swagger/templates/analysis-item.yaml
@@ -31,6 +31,11 @@ template: |
       {{/resource}}
       tags:
       - '{{tag}}'
+      parameters:
+        - name: inflate_job
+          in: query
+          type: boolean
+          description: Return job as an object instead of an id
       responses:
         '200':
           description: ''
