--- a/swagger/templates/analysis-notes.yaml
+++ b/swagger/templates/analysis-notes.yaml
@@ -26,6 +26,7 @@ template: |
     parameters:
       - name: body
         in: body
+        required: true
         schema:
           $ref: schemas/input/note.json
     responses:
