Add get_analyses endpoint documentation
This documents the endpoints for /<container>/<cid>/analyses as well as
/<container>/<cid>/<subcontainer>/analyses.

--- a/swagger/paths/acquisitions.yaml
+++ b/swagger/paths/acquisitions.yaml
@@ -51,6 +51,8 @@ $template_arguments:
 # ===== Analyses =====
 /acquisitions/{AcquisitionId}/analyses:
   $template: templates/analyses-list.yaml
+  arguments:
+    allowCreate: true
 /acquisitions/{AcquisitionId}/analyses/{AnalysisId}:
   $template: templates/analysis-item.yaml
   arguments:
