Update schemas for analyses in SDK
This update forces us to use the inflated job for single analysis end points.

--- a/swagger/templates/analysis-item.yaml
+++ b/swagger/templates/analysis-item.yaml
@@ -36,6 +36,7 @@ template: |
           in: query
           type: boolean
           description: Return job as an object instead of an id
+          x-sdk-default: 'true'
       responses:
         '200':
           description: ''
