--- a/swagger/templates/analyses-list.yaml
+++ b/swagger/templates/analyses-list.yaml
@@ -52,6 +52,7 @@ template: |
         in: query
         type: boolean
         description: Return job as an object instead of an id
+        x-sdk-default: 'true'
     responses:
       '200':
         description: Returns the id of the analysis that was created.
